{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 133,
  "lineage": "de67016a-2c4a-5e1d-dbac-76afb8aab3ea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091f18e98bc129c4e",
            "arn": "arn:aws:ec2:eu-west-2:597088025647:instance/i-0b1237132bb2c9fa1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1237132bb2c9fa1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05e947baaf12dd72d",
            "private_dns": "ip-10-0-1-167.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.167",
            "public_dns": "ec2-18-130-247-158.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.247.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f5c859a76b23f059",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3051dc8b3f0606c",
            "tags": {
              "Name": "Terraform-EC2-Instance"
            },
            "tags_all": {
              "Name": "Terraform-EC2-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07261d05de8fcc1bd"
            ]
          },
          "dependencies": [
            "aws_key_pair.devops_key",
            "aws_security_group.web_sg",
            "aws_subnet.devops_subnet_1",
            "aws_vpc.devops_playground",
            "tls_private_key.devops_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:597088025647:internet-gateway/igw-0bde00cfb8251ca04",
            "id": "igw-0bde00cfb8251ca04",
            "owner_id": "597088025647",
            "tags": {
              "Name": "devops-igw"
            },
            "tags_all": {
              "Name": "devops-igw"
            },
            "vpc_id": "vpc-029f2aa6769bc264a"
          },
          "dependencies": [
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:597088025647:loadbalancer/app/web-load-balancer/c61f20a846a1bc76",
            "arn_suffix": "app/web-load-balancer/c61f20a846a1bc76",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-load-balancer-714397045.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:597088025647:loadbalancer/app/web-load-balancer/c61f20a846a1bc76",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07261d05de8fcc1bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-066dd9ca5c01c89aa"
              },
              {
                "subnet_id": "subnet-0a3051dc8b3f0606c"
              }
            ],
            "subnets": [
              "subnet-066dd9ca5c01c89aa",
              "subnet-0a3051dc8b3f0606c"
            ],
            "vpc_id": "vpc-029f2aa6769bc264a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.devops_subnet_1",
            "aws_subnet.devops_subnet_2",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:597088025647:route-table/rtb-02117420b336b9ea8",
            "id": "rtb-02117420b336b9ea8",
            "owner_id": "597088025647",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bde00cfb8251ca04",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-route-table"
            },
            "tags_all": {
              "Name": "devops-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-029f2aa6769bc264a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01837ebcace8d3a29",
            "route_table_id": "rtb-02117420b336b9ea8",
            "subnet_id": "subnet-0a3051dc8b3f0606c"
          },
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.devops_route_table",
            "aws_subnet.devops_subnet_1",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e64c635fdd510f27",
            "route_table_id": "rtb-02117420b336b9ea8",
            "subnet_id": "subnet-066dd9ca5c01c89aa"
          },
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.devops_route_table",
            "aws_subnet.devops_subnet_2",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:597088025647:security-group/sg-07261d05de8fcc1bd",
            "description": "Allow inbound SSH, HTTP, and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07261d05de8fcc1bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "597088025647",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029f2aa6769bc264a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:597088025647:subnet/subnet-0a3051dc8b3f0606c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3051dc8b3f0606c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "597088025647",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-subnet-1"
            },
            "tags_all": {
              "Name": "devops-subnet-1"
            },
            "vpc_id": "vpc-029f2aa6769bc264a"
          },
          "dependencies": [
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:597088025647:subnet/subnet-066dd9ca5c01c89aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066dd9ca5c01c89aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "597088025647",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-subnet-2"
            },
            "tags_all": {
              "Name": "devops-subnet-2"
            },
            "vpc_id": "vpc-029f2aa6769bc264a"
          },
          "dependencies": [
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_playground",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:597088025647:vpc/vpc-029f2aa6769bc264a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-038665ac7315a33f6",
            "default_route_table_id": "rtb-020de1287e41c796f",
            "default_security_group_id": "sg-0e5853ebecf3e27ae",
            "dhcp_options_id": "dopt-078d2d882f65c0302",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-029f2aa6769bc264a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020de1287e41c796f",
            "owner_id": "597088025647",
            "tags": {
              "Name": "devops-playground"
            },
            "tags_all": {
              "Name": "devops-playground"
            }
          }
        }
      ]
    }
  ]
}